--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   velocity_x: ^3.6.0
   get: ^4.6.5
   font_awesome_flutter: ^10.4.0
+  image_picker: ^0.8.6+4
 
 dev_dependencies:
   flutter_test:
